[project]
name = "review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.138.0",
    "jinja2>=3.1.6",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
]
