[project]
name = "review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.138.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openai>=2.43.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qrcode>=8.2",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
]
